--- a/examples/makefile
+++ b/examples/makefile
@@ -2,7 +2,7 @@ EXEC         := fft_test
 SOURCE       := fft.cpp
 HEADER       :=  $(wildcard ../*.hpp) $(wildcard LATfield2d/*.h)
 COMPILER     := CC
-OPT          := -std=c++11  -O3 -acc -Minfo=accel -ta=tesla:cc35
+OPT          := -std=c++11  -O3 -acc -Minfo=accel -ta=tesla:cc35 -w
 INC          := -I./../
 LIB          := -lfftw3 -lm
 DEF_LATFIEILD:= -DFFT3D
