--- a/examples/makefile
+++ b/examples/makefile
@@ -1,8 +1,14 @@
 EXEC                      := poisson fft_test
 HEADER                    := $(wildcard ../*.hpp) $(wildcard LATfield2d/*.h)
 COMPILER                  := CC
-# OPT                       := -std=c++11  -O3 -acc -Minfo=accel -ta=tesla:cc35 -w
+ifdef DEBUG
 OPT                       :=
+CFLAG                     := -g -std=c++11 -w -Mbounds -traceback
+else
+OPT                       := -O3
+#OPT                      := -O3 -acc -Minfo=accel -ta=tesla:cc35 -w
+CFLAG                     := -std=c++11 -w
+endif
 INC                       := -I./../
 LIB                       := -lfftw3 -lm
 DEF_LATFIEILD             := -DFFT3D
@@ -26,10 +32,10 @@ tests: ${EXEC}
 	./RunTest.sh
 
 fft_test: fft.cpp $(HEADER) makefile
-	$(COMPILER) fft.cpp $(INC) $(DEF) $(LIB) $(OPT) -o fft_test
+	$(COMPILER) fft.cpp $(INC) $(DEF) $(LIB) $(OPT) $(CFLAG) -o fft_test
 
 poisson: poissonSolver.cpp $(HEADER) makefile
-	$(COMPILER) poissonSolver.cpp  $(INC) $(DEF) $(LIB) $(OPT) -o poisson
+	$(COMPILER) poissonSolver.cpp $(INC) $(DEF) $(LIB) $(OPT) $(CFLAG) -o poisson
 
 clean:
 	rm -f $(EXEC) *.o *~
