--- a/examples/makefile
+++ b/examples/makefile
@@ -13,7 +13,8 @@ CFLAG                     := -g -std=c++11 -Mbounds -traceback -w --gnu
 else
 OPT_OPENACC               := -O3 -acc -Minfo=accel -ta=tesla:cc35 -VH15.7
 OPT_CPU                   := -O3
-CFLAG                     := -std=c++11 -w -Y0,/users/hck60/pgi -Mqq,expand+beforeaccel,printblocks -v
+CFLAG                     := -std=c++11 -w
+# CFLAG                     := -std=c++11 -w -Y0,/users/hck60/pgi -Mqq,expand+beforeaccel,printblocks -v
 # CFLAG                     := -E
 endif
 
