added getting started example

--- a/examples/makefile
+++ b/examples/makefile
@@ -1,5 +1,5 @@
 #---------------- parameters -----------------------------------------------#
-EXEC                      := poisson wave_test #fft_test
+EXEC                      := poisson wave_test gettingStarted #fft_test
 TEST_WITH_EVERY_BUILD     := true
 COMPILER                  := CC
 INC                       := -I./../
