--- a/examples/makefile
+++ b/examples/makefile
@@ -7,16 +7,15 @@ LIB_OPENACC               := -L/opt/nvidia/cudatoolkit6.5/default/lib64/
 LIB_CPU                   := -lfftw3 -lm
 DEF_LATFIEILD             := -DFFT3D_ACC
 ifdef DEBUG
-OPT_OPENACC               :=
+OPT_OPENACC               := -DGPU
 OPT_CPU                   :=
 CFLAG                     := -g -std=c++11 -Mbounds -traceback -w --gnu
 else
-OPT_OPENACC               := -O3 -acc -Minfo=accel -ta=tesla:cc35 -VH15.7
+OPT_OPENACC               := -O3 -acc -DGPU -Minfo=accel -ta=tesla:cc35 -VH15.7
 OPT_CPU                   := -O3
 CFLAG                     := -std=c++11 -DNO_OUTPUT -w
 # CFLAG                     := -std=c++11 -w -Y0,/users/hck60/pgi -Yc,/users/hck60/pgi -Mqq,expand+beforeaccel,printblocks
 # CFLAG                     := -E
->>>>>>> master
 endif
 
 #---------------- setup -----------------------------------------------------#
